# ethos

./: .env.example  .gitignore  AGENTS.md  CASS.md  README.md  pyproject.toml
docs/: cassiopeia-1.0-scope.md  project-structure.md
docs/development/: architecture.md  commands-events-and-gateways.md  index.md  workspaces-and-runtime.md
docs/milestones/: 01-project-foundation.md  03-event-api-and-minimal-hooks.md  04-core-domain-models.md
docs/notes/: ollama-thinking-streams.md
scripts/: install.sh  verify  verify.sh
src/cassiopeia/: app.py  config.py  events.py  home.py  provider.py  runtime.py  shared.py  storage.py
src/cassiopeia/cli/: __init__.py  main.py
src/cassiopeia/configs/: __init__.py  cass_config.py  events_config.py
src/cassiopeia/events/: __init__.py  catalogue.py  emitters.py  listeners.py  models.py  sinks.py  types.py
src/cassiopeia/gateways/: __init__.py  models.py
src/cassiopeia/memory/: __init__.py  models.py
src/cassiopeia/permissions/: __init__.py  models.py
src/cassiopeia/personas/: __init__.py  models.py
src/cassiopeia/sessions/: __init__.py  models.py
src/cassiopeia/skills/: __init__.py  models.py
src/cassiopeia/storage/: __init__.py
src/cassiopeia/subagents/: __init__.py  models.py
src/cli/: main.py
src/ethos/: app.py  config.py  environments.py  home.py  onboarding.py  provider.py  runtime.py  sessions.py  storage.py  workspaces.py
tests/: test_app.py  test_cli.py  test_codex_provider.py  test_commands.py  test_config.py  test_discord.py  test_emitters.py  test_environments.py  test_event_listeners.py  test_event_models.py  test_event_sinks.py  test_events.py  test_gateway_supervisor.py  test_gateways.py  test_graph.py  test_home.py  test_provider.py  test_runtime.py  test_session_commands.py  test_settings.py  test_shared.py  test_storage.py  test_vox.py  test_workspace_commands.py  test_workspaces.py
tests/domain/: test_model_boundaries.py
tests/gateways/: test_models.py
tests/memory/: test_models.py
tests/permissions/: test_models.py
tests/personas/: test_models.py
tests/sessions/: test_models.py
tests/skills/: test_models.py
tests/subagents/: test_models.py
tests/tools/: test_models.py
tests/workflows/: test_models.py
tests/workspaces/: test_models.py
(+23 files in other folders)
