[project]
name = "ethos"
version = "0.1.0"
description = "Another ai harness"
readme = "README.md"
authors = [
    { name = "Arad Fadaei", email = "arad@fadaei.dev" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "click>=8.4.1",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[google,openai]>=2.0.0",
    "pydantic-ai-harness>=0.4.0",
    "pydantic-evals>=2.0.0",
    "pydantic-graph>=2.0.0",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "pyturso>=0.6.1",
    "textual>=8.2.7",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "discord.py>=2.7.1",
]

[project.scripts]
ethos = "ethos.app:main"

[tool.ruff]
line-length = 80
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
no_implicit_reexport = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
